trying to fix clipping

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -20,10 +20,11 @@
   top: 40%;
   left: 50%;
   margin: 0 auto;
-  -webkit-transform: translate(-50%, 0%);
-  transform: translate(-50%, 0%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 
   width: 90%;
+  max-height: 40%;
   max-width: 750px;
 
   .site-title {
